# python-webframework-performance

./: .env  .pre-commit-config.yaml  Dockerfile.aiohttp  Dockerfile.fastapi  Dockerfile.litestar  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
performance/: infra.py  server_aiohttp.py  server_fastapi.py  server_litestar.py
performance/infra/: cache.py  database.py  db_init.py
wrk_scripts/: db_one.lua  mix.lua
